--- a/Client/Podfile
+++ b/Client/Podfile
@@ -5,10 +5,10 @@ target 'twiths_' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
 
-pod 'RealmSwift'
+#pod 'RealmSwift'
 
 pod 'Firebase/Core'
-
+pod 'Firebase/Database'
 pod 'Firebase/Auth'
 pod 'GoogleSignIn'
 pod 'FBSDKCoreKit'
