--- a/Client/Podfile
+++ b/Client/Podfile
@@ -9,6 +9,7 @@ target 'twiths_' do
 
 pod 'Firebase/Core'
 pod 'Firebase/Database'
+pod 'Firebase/Storage'
 pod 'Firebase/Auth'
 pod 'GoogleSignIn'
 pod 'FBSDKCoreKit'
