--- a/Client/Podfile
+++ b/Client/Podfile
@@ -8,7 +8,7 @@ target 'twiths_' do
 #pod 'RealmSwift'
 
 pod 'Firebase/Core'
-pod 'Firebase/Database'
+pod 'Firebase/Firestore'
 pod 'Firebase/Storage'
 pod 'Firebase/Auth'
 pod 'GoogleSignIn'
