--- a/Client/Podfile
+++ b/Client/Podfile
@@ -5,8 +5,6 @@ target 'twiths_' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
 
-#pod 'RealmSwift'
-
 pod 'Firebase/Core'
 pod 'Firebase/Firestore'
 pod 'Firebase/Storage'
@@ -14,6 +12,10 @@ pod 'Firebase/Auth'
 pod 'GoogleSignIn'
 pod 'FBSDKCoreKit'
 pod 'FBSDKLoginKit'
+
+pod 'GoogleMaps'
+pod 'GooglePlaces'
+
   # Pods for twiths_
 
 end
