--- a/Client/Podfile
+++ b/Client/Podfile
@@ -18,6 +18,10 @@ pod 'GooglePlaces'
 
 pod 'Cosmos', '~> 16.0'
 
+post_install do |installer| installer.pods_project.build_configurations.each do |config| 
+config.build_settings.delete('CODE_SIGNING_ALLOWED') 
+config.build_settings.delete('CODE_SIGNING_REQUIRED') end end
+
   # Pods for twiths_
 
 end
