--- a/Client/twiths_/Info.plist
+++ b/Client/twiths_/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>랜드마크 도착 인증 시 사진 업로드</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -48,10 +50,10 @@
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-    <string>위치 접근을 허용해야, 진행 할 수 있습니다.</string>
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>위치 접근을 허용해야, 진행 할 수 있습니다.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>위치 접근을 허용해야, 진행 할 수 있습니다.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>위치 접근을 허용해야, 진행 할 수 있습니다.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
